updating a few issues

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="s-menublock__content-header section-header">
                         <h2 class="text-display-title with-line text-center">Our Empowerment Events</h2>
                         <p class="attention-getter text-center" >
-                            At She Leads, our empowerment events are dynamic and transformative experiences Developeded to inspire and uplift young African women. Through a series of carefully curated seminars, workshops, and conferences, we provide a platform for learning, networking, and personal growth.
+                            At She Leads, our empowerment events are dynamic and transformative experiences developed to inspire and uplift young African women. Through a series of carefully curated seminars, workshops, and conferences, we provide a platform for learning, networking, and personal growth.
                             Our events cover a wide range of topics, from leadership skills and career development to self-care and mental health. We believe in creating spaces where participants can engage in meaningful discussions, share experiences, and gain valuable insights from accomplished speakers and mentors.
                         </p>                  
                     </div> <!-- end s-menublock__content-header --> 
@@ -207,7 +207,7 @@
 
             <div class="row">
                 <div class="column xl-12 menublock__slider-nav">
-                    <a href="menu.html" class="menu-link">View Upcoming Events</a>
+                    <a href="events.html" class="menu-link">View Upcoming Events</a>
 
                     <div class="menublock-buttons">
                         <div class="menublock-btn-prev">
