--- a/involved.html
+++ b/involved.html
@@ -135,9 +135,9 @@
                 <div class="row width-narrower content-block">
                     <div class="column xl-12">
 
-                        <form name="rform" id="rform" class="reservation-form" method="post" action="" autocomplete="off">
+                        <form name="rform" id="rform" class="reservation-form" method="post" action="mailto:mabotjapapa@gmail.com" autocomplete="off">
                             <fieldset class="row">
-
+                                <input type="hidden" name="subject" value="She Leads get involved mail"/>
                                 <div class="column xl-6 tab-12">
                                     <label for="rname">Name: </label>
                                     <input type="text" name="rame" id="rname" class="u-fullwidth" placeholder="Enter Your Name" value="">
@@ -155,7 +155,7 @@
 
                                 <div class="column xl-6 tab-12">
                                     <label for="rdate">Email Address: </label>
-                                    <input type="text" name="rdate" id="rdate" class="u-fullwidth" placeholder="Enter Your Email Address" value="">
+                                    <input type="text" name="email" id="rdate" class="u-fullwidth" placeholder="Enter Your Email Address" value="">
                                 </div>
 
                                 <div class="column xl-12 message u-add-bottom">
