--- a/events.html
+++ b/events.html
@@ -79,7 +79,7 @@
 
                 <ul class="s-header__nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li class="current"><a href="Events.html">Events</a></li>
+                    <li class="current"><a href="events.html">Events</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="involved.html">Get Involved</a></li>
                 </ul> <!-- s-header__nav-links -->    
