--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 <ul class="s-header__nav-links">
                     <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="Events.html">Events</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="involved.html">Get Involved</a></li>
                 </ul> <!-- s-header__nav-links -->    
