--- a/involved.html
+++ b/involved.html
@@ -78,10 +78,10 @@
                 </div> <!-- s-header__nav-logo -->  
 
                 <ul class="s-header__nav-links">
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="Events.html">Events</a></li>
+                    <li ><a href="index.html">Home</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="involved.html">Get Involved</a></li>
+                    <li class="current"><a href="involved.html">Get Involved</a></li>
                 </ul> <!-- s-header__nav-links -->    
 
                 <div class="s-header__nav-bottom">
