frontend integration with formspree for the get involved page

--- a/involved.html
+++ b/involved.html
@@ -135,22 +135,22 @@
                 <div class="row width-narrower content-block">
                     <div class="column xl-12">
 
-                        <form name="rform" id="rform" class="reservation-form" method="post" action="mailto:mabotjapapa@gmail.com" autocomplete="off">
+                        <form name="rform" id="rform" class="reservation-form" method="post" action="https://formspree.io/f/moqozaln" autocomplete="off">
                             <fieldset class="row">
                                 <input type="hidden" name="subject" value="She Leads get involved mail"/>
                                 <div class="column xl-6 tab-12">
                                     <label for="rname">Name: </label>
-                                    <input type="text" name="rame" id="rname" class="u-fullwidth" placeholder="Enter Your Name" value="">
+                                    <input type="text" name="name" id="rname" class="u-fullwidth" placeholder="Enter Your Name" value="">
                                 </div>
                                 
                                 <div class="column xl-6 tab-12">
                                     <label for="rparty-size">Surname:</label>
-                                    <input type="text" name="rparty-size" id="rparty-size" class="u-fullwidth" placeholder="Enter Your Surname" value="">
+                                    <input type="text" name="surname" id="rparty-size" class="u-fullwidth" placeholder="Enter Your Surname" value="">
                                 </div>
 
                                 <div class="column xl-6 tab-12">
                                     <label for="rphone">Contact Number: </label>
-                                    <input type="tel" name="rphone" id="rphone" class="u-fullwidth" placeholder="Enter Your Contact No." value="">
+                                    <input type="tel" name="contactNo" id="rphone" class="u-fullwidth" placeholder="Enter Your Contact No." value="">
                                 </div>
 
                                 <div class="column xl-6 tab-12">
@@ -160,7 +160,7 @@
 
                                 <div class="column xl-12 message u-add-bottom">
                                     <label for="radd-info">How would you like to get involved? </label>
-                                    <textarea name="radd-info" id="radd-info" class="u-fullwidth" placeholder="Let us know how you would like to get involved with She Leads, and we will contact you with the next steps"></textarea>
+                                    <textarea name="message" id="radd-info" class="u-fullwidth" placeholder="Let us know how you would like to get involved with She Leads, and we will contact you with the next steps"></textarea>
                                 </div>
                                
                                 <div class="rform__bottom column xl-12">
