--- a/about.html
+++ b/about.html
@@ -84,6 +84,7 @@
                     <li class="current"><a href="events.html">Events</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="involved.html">Get Involved</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul> <!-- s-header__nav-links -->    
 
                 <div class="s-header__nav-bottom">
