--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <li><a href="events.html">Events</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="involved.html">Get Involved</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul> <!-- s-header__nav-links -->    
 
                 <div class="s-header__nav-bottom">
