--- a/events.html
+++ b/events.html
@@ -130,7 +130,7 @@
                     <div class="column xl-10 mob-12">     
                         <h3>No Upcoming Events</h3>
                         <p class="attention-getter">
-                            Our Events calendar for 2024 will be updated soon, keep an eye out on our instagram for further updates.
+                            Our Events calendar for 2026 will be updated soon, keep an eye out on our instagram for further updates.
                         </p>
                         <a href="https://www.instagram.com/_she.leads_/?hl=en" class="btn btn--primary u-fullwidth">Instagram</a>
                     </div>
@@ -147,9 +147,86 @@
                                 <ul class="menu-list">
                                     <li class="menu-list__item">
                                         <div class="menu-list__item-desc">                                            
-                                            <h4>She Leads Executives Dinner</h4>
+                                            <h4>She Leads 3RD Executives Dinner</h4>
                                             <p>
-                                            A space for impartation created for executives to celebrate and empower newly appointed executives.
+                                            A space for impartation created for executives to celebrate and empower newly appointed executives
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            28/11/2025
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>PioneerHers of Economic Transformation Using AI Conference</h4>
+                                            <p>
+                                            A gathering where innovation meets impact
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            09/08/2025
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>Chomie App Launch</h4>
+                                            <p>
+                                            A revolutionary tool in the fight against gender-based violence
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            06/12/2024
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>She Leads 2ND Executives Dinner</h4>
+                                            <p>
+                                            A celebration of women supporting women, paving the way for the next generation of leaders
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            08/11/2024
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>EmpowerHer AI Women Leading the Charge Against GBV Conference</h4>
+                                            <p>
+                                            Join us as we witness young generation come up with AI solutions on GBV
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            22/06/2024
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>EmpowerHer AI Hackathon</h4>
+                                            <p>
+                                            Join us at this amazing event where we hack into the potential of AI to solve real world problems facing women
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            19-20/06/2024
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>She Leads Namibian Division</h4>
+                                            <p>
+                                            University of Namibia’s Annual Branch Opening!
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            17/04/2024
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>She Leads 1st Executives Dinner</h4>
+                                            <p>
+                                            A space for impartation created for executives to celebrate and empower newly appointed executives
                                             </p>
                                         </div>
                                         <div class="menu-list__item-price">
@@ -182,13 +259,15 @@
                                         <div class="menu-list__item-desc">                                            
                                             <h4>Female Student Leader Capacity Building Workshop</h4>
                                             <p>
-                                            Join us as we embark on a new path, empowering young women leaders to lead fearlessly.
+                                            Join us as we embark on a new path, empowering young women leaders to lead fearlessly
                                             </p>
                                         </div>
                                         <div class="menu-list__item-price">
                                             5-6/8/2023
                                         </div>
                                     </li>
+                                    
+                                        </div>
                                 </ul> <!-- end menu-list -->
                             </div> <!-- end menu-block__group -->
 
