--- a/events.html
+++ b/events.html
@@ -147,7 +147,7 @@
                                 <ul class="menu-list">
                                     <li class="menu-list__item">
                                         <div class="menu-list__item-desc">                                            
-                                            <h4>She Leads 3RD Executives Dinner</h4>
+                                            <h4>She Leads 3rd Executives Dinner</h4>
                                             <p>
                                             A space for impartation created for executives to celebrate and empower newly appointed executives
                                             </p>
@@ -169,18 +169,7 @@
                                     </li>
                                     <li class="menu-list__item">
                                         <div class="menu-list__item-desc">                                            
-                                            <h4>Chomie App Launch</h4>
-                                            <p>
-                                            A revolutionary tool in the fight against gender-based violence
-                                            </p>
-                                        </div>
-                                        <div class="menu-list__item-price">
-                                            06/12/2024
-                                        </div>
-                                    </li>
-                                    <li class="menu-list__item">
-                                        <div class="menu-list__item-desc">                                            
-                                            <h4>She Leads 2ND Executives Dinner</h4>
+                                            <h4>She Leads 2nd Executives Dinner</h4>
                                             <p>
                                             A celebration of women supporting women, paving the way for the next generation of leaders
                                             </p>
