Aligned the footer

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 <a class="s-header__menu-toggle" href="#0"><span>Browse</span></a>
 
                 <div class="s-header__cta">
-                    <a href="reservations.html" class="btn btn--primary s-header__cta-btn">Get Involved</a>                        
+                    <a href="involved.html" class="btn btn--primary s-header__cta-btn">Get Involved</a>                        
                 </div>
 
             </div> <!-- end s-header__block -->
@@ -91,7 +91,7 @@
                     <h6>Get Involved</h6>
 
                     <div class="s-header__booking">
-                        <div class="s-header__booking-no"><a href="reservations.html">How To Donate</a></div>
+                        <div class="s-header__booking-no"><a href="involved.html">How To Donate</a></div>
                     </div>
 
                     <ul class="s-header__nav-social social-list">
@@ -313,15 +313,13 @@
         </ul> 
     </div>
 </div> <!-- end section-footer__social -->
-    
-                <div class="column xl-6 lg-12">
-                    <p class="ss-copyright">
-                        <span>© Copyright She Leads 2023</span> 
-                        <span>Developed by <a href="https://www.adakindigital.com/" target="_blank">Adakindigital</a></span>
-                    </p>
-                </div>
 
-            </div> <!-- end section-footer__bottom -->          
+ <div class="column xl-12 lg-12"> 
+    <p class="ss-copyright">
+        <span>© Copyright She Leads 2026</span> 
+        <span>Developed by &nbsp;  <a href="https://www.adakindigital.com" target="_blank">Adakin Digital</a></span>
+    </p>
+   </div> <!-- end section-footer__bottom -->          
 
             <div class="ss-go-top">
                 <a class="smoothscroll" title="Back to Top" href="#top">                 
