--- a/index.html
+++ b/index.html
@@ -521,15 +521,12 @@
         </ul> 
     </div>
 </div> <!-- end section-footer__social -->
-
-                <div class="column xl-6 lg-12">
-                    <p class="ss-copyright">
-                        <span>© Copyright She Leads 2023</span> 
-                        <span>Developed by <a href="https://www.adakindigital.com" target="_blank">Adakin Digital</a></span>
-                    </p>
-                </div>
-
-            </div> <!-- end section-footer__bottom -->          
+<div class="column xl-12 lg-12"> 
+    <p class="ss-copyright">
+        <span>© Copyright She Leads 2026</span> 
+        <span>Developed by &nbsp;  <a href="https://www.adakindigital.com" target="_blank">Adakin Digital</a></span>
+    </p>
+</div><!-- end section-footer__bottom -->          
 
             <div class="ss-go-top">
                 <a class="smoothscroll" title="Back to Top" href="#top">                 
