added a new picture

--- a/involved.html
+++ b/involved.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="column content-block__media">
                         <figure>
-                            <img src="images/involved/empower.png" alt="">
+                            <img src="images/involved/helping.JPG" alt="">
                         </figure>
                     </div>
                 </div> <!-- end content-block-->
