Missing event added

--- a/events.html
+++ b/events.html
@@ -125,7 +125,11 @@
             
             <!-- ## pagecontent -->
             <section class="s-pagecontent pagecontent">
-                
+                <style>
+    .btn--primary::after {
+        content: none !important;
+    }
+</style>
                 <div class="row width-narrower row-x-center content-block content-block--grey cta-block">
                     <div class="column xl-10 mob-12">     
                         <h3>No Upcoming Events</h3>
@@ -165,6 +169,17 @@
                                         </div>
                                         <div class="menu-list__item-price">
                                             09/08/2025
+                                        </div>
+                                    </li>
+                                    <li class="menu-list__item">
+                                        <div class="menu-list__item-desc">                                            
+                                            <h4>EmpoerHer AI Hackathon</h4>
+                                            <p>
+                                            Join the movement where tech meets justice and innovation drives change!
+                                            </p>
+                                        </div>
+                                        <div class="menu-list__item-price">
+                                            07-08/08/2025
                                         </div>
                                     </li>
                                     <li class="menu-list__item">
