--- a/events.html
+++ b/events.html
@@ -126,11 +126,7 @@
             
             <!-- ## pagecontent -->
             <section class="s-pagecontent pagecontent">
-                <style>
-    .btn--primary::after {
-        content: none !important;
-    }
-</style>
+    
                 <div class="row width-narrower row-x-center content-block content-block--grey cta-block">
                     <div class="column xl-10 mob-12">     
                         <h3>No Upcoming Events</h3>
@@ -174,7 +170,7 @@
                                     </li>
                                     <li class="menu-list__item">
                                         <div class="menu-list__item-desc">                                            
-                                            <h4>EmpoerHer AI Hackathon</h4>
+                                            <h4>EmpowerHer AI Hackathon</h4>
                                             <p>
                                             Join the movement where tech meets justice and innovation drives change!
                                             </p>
@@ -280,7 +276,6 @@
 
                     </div>
                 </div> <!-- end content-block -->
-
 
 
             </section> <!-- pagecontent --> 
